# supreme_court

./: main.py  metadata.py  pyproject.toml
2019_metadata/: 2019_1.json  2019_10.json  2019_100.json  2019_101.json  2019_102.json  2019_103.json  2019_104.json  2019_105.json  2019_106.json  2019_107.json  2019_108.json  2019_109.json  2019_11.json  2019_110.json  2019_111.json  2019_112.json  2019_113.json  2019_114.json  2019_115.json  2019_116.json  2019_117.json  2019_118.json  2019_119.json  2019_12.json  2019_120.json  2019_121.json  2019_122.json  2019_123.json  2019_124.json  2019_125.json  2019_126.json  2019_127.json  2019_128.json  2019_129.json  2019_13.json  2019_130.json  2019_131.json  2019_132.json  2019_133.json  2019_134.json  (+924 more)
2020_metadata/: 2020_1.json  2020_10.json  2020_100.json  2020_101.json  2020_102.json  2020_103.json  2020_104.json  2020_105.json  2020_106.json  2020_107.json  2020_108.json  2020_109.json  2020_11.json  2020_110.json  2020_111.json  2020_112.json  2020_113.json  2020_114.json  2020_115.json  2020_116.json  2020_117.json  2020_118.json  2020_119.json  2020_12.json  2020_120.json  2020_121.json  2020_122.json  2020_123.json  2020_124.json  2020_125.json  2020_126.json  2020_127.json  2020_128.json  2020_129.json  2020_13.json  2020_130.json  2020_131.json  2020_132.json  2020_133.json  2020_134.json  (+497 more)
data/: 1950.json  1952.json  1953.json  1955.json  1957.json  1958.json  1960.json  1962.json  1965.json  1966.json  1968.json  1970.json  1971.json  1972.json  1974.json  1976.json  1979.json  1980.json  1983.json  1987.json  (+19 more)
(+32 files in other folders)
